@@ -27,6 +27,7 @@ import com.powsybl.sld.layout.LayoutParameters;
 import com.powsybl.sld.library.ConvergenceComponentLibrary;
 import com.powsybl.sld.model.graphs.VoltageLevelGraph;
 import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.server.dto.VoltageLevelSelectionInfos;
 import com.powsybl.sld.server.dto.SvgAndMetadata;
 import com.powsybl.sld.server.dto.nad.NadConfigInfos;
 import com.powsybl.sld.server.repository.NadConfigRepository;
@@ -318,10 +319,11 @@ class SingleLineDiagramTest {
         given(geoDataService.getSubstationsGraphics(testNetworkId, VARIANT_2_ID, List.of("subFr1"))).willReturn(toString(GEO_DATA_SUBSTATIONS));
         given(networkStoreService.getNetwork(testNetworkId, PreloadingStrategy.COLLECTION)).willReturn(createNetwork());
         given(networkStoreService.getNetwork(notFoundNetworkId, PreloadingStrategy.COLLECTION)).willThrow(new PowsyblException());
-
+        VoltageLevelSelectionInfos voltageLevelSelectionInfos = VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A")).build();
+        String jsonBody = objectMapper.writeValueAsString(voltageLevelSelectionInfos);
         MvcResult result = mvc.perform(post("/v1/network-area-diagram/{networkUuid}?variantId=" + VARIANT_2_ID + "&depth=0", testNetworkId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("[\"vlFr1A\"]"))
+                        .content(jsonBody))
                 .andExpect(status().isOk())
                 .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON_VALUE))
                 .andReturn();
@@ -333,7 +335,7 @@ class SingleLineDiagramTest {
 
         mvc.perform(post("/v1/network-area-diagram/{networkUuid}?variantId=" + VARIANT_2_ID + "&depth=2", testNetworkId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("[\"vlFr1A\"]"))
+                        .content(jsonBody))
                 .andExpect(status().isOk())
                 .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON_VALUE))
                 .andReturn();
@@ -342,10 +344,11 @@ class SingleLineDiagramTest {
         assertTrue(stringResult2.contains("metadata"));
         assertTrue(stringResult2.contains("additionalMetadata"));
         assertTrue(stringResult2.contains("<?xml"));
-
+        voltageLevelSelectionInfos = VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("notFound")).build();
+        String notFoundBody = objectMapper.writeValueAsString(voltageLevelSelectionInfos);
         mvc.perform(post("/v1/network-area-diagram/{networkUuid}?variantId=" + VARIANT_2_ID + "&depth=2", testNetworkId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("[\"notFound\"]"))
+                        .content(notFoundBody))
                 .andExpect(status().isNotFound());
     }
 
@@ -391,7 +394,7 @@ class SingleLineDiagramTest {
         UUID testNetworkId = UUID.fromString("7928181c-7977-4592-ba19-88027e4254e4");
         given(networkStoreService.getNetwork(testNetworkId, PreloadingStrategy.COLLECTION)).willReturn(createNetwork());
         given(geoDataService.getSubstationsGraphics(testNetworkId, VARIANT_2_ID, List.of("subFr1"))).willReturn(toString(GEO_DATA_SUBSTATIONS));
-        networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, VARIANT_2_ID, List.of("vlFr1A"), 0, withGeoData);
+        networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, VARIANT_2_ID, VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A")).build(), 0, withGeoData);
         if (withGeoData) {
             //initialize with geographical data
             verify(geoDataService, times(1)).getSubstationsGraphics(testNetworkId, VARIANT_2_ID, List.of("subFr1"));
@@ -439,7 +442,7 @@ class SingleLineDiagramTest {
         given(networkStoreService.getNetwork(testNetworkId, PreloadingStrategy.COLLECTION)).willReturn(networkWithDepth);
 
         // Test with a depth of zero, should return in the metadata only one voltage level
-        SvgAndMetadata svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, null, List.of("vlFr1A"), 0, false);
+        SvgAndMetadata svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, null, VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A")).build(), 0, false);
         Object additionalMetadata = svgAndMetadata.getAdditionalMetadata();
         assertNotNull(additionalMetadata);
         Map<String, Object> convertedMetadata = objectMapper.convertValue(additionalMetadata, new TypeReference<>() { });
@@ -451,8 +454,21 @@ class SingleLineDiagramTest {
         assertEquals("vlFr1A", voltageLevels.get(0).get("name"));
         assertEquals("subFr1", voltageLevels.get(0).get("substationId"));
 
+        // Test with an initial depth zero and enable depth extension on the selected voltage level "vlFr1A"
+        svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, null, VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A")).expandedVoltageLevelIds(List.of("vlFr1A")).build(), 0, false);
+        additionalMetadata = svgAndMetadata.getAdditionalMetadata();
+        assertNotNull(additionalMetadata);
+        convertedMetadata = objectMapper.convertValue(additionalMetadata, new TypeReference<>() { });
+        assertEquals(2, convertedMetadata.get("nbVoltageLevels"));
+        voltageLevels = objectMapper.convertValue(convertedMetadata.get("voltageLevels"), new TypeReference<>() { });
+        assertNotNull(voltageLevels);
+        assertEquals(2, voltageLevels.size());
+
+        assertTrue(voltageLevels.stream().anyMatch(vl -> "vlFr1A".equals(vl.get("id"))));
+        assertTrue(voltageLevels.stream().anyMatch(vl -> "vlFr2A".equals(vl.get("id"))));
+
         // Test with a depth of two, should return in the metadata three voltage level
-        svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, null, List.of("vlFr1A"), 2, false);
+        svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, null, VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A")).build(), 2, false);
         additionalMetadata = svgAndMetadata.getAdditionalMetadata();
         assertNotNull(additionalMetadata);
         convertedMetadata = objectMapper.convertValue(additionalMetadata, new TypeReference<>() { });
@@ -729,7 +745,7 @@ class SingleLineDiagramTest {
         given(networkStoreService.getNetwork(testNetworkId, PreloadingStrategy.COLLECTION)).willReturn(createNetwork());
         given(geoDataService.getSubstationsGraphics(testNetworkId, VARIANT_2_ID, List.of("subFr1"))).willReturn(toString(GEO_DATA_SUBSTATIONS));
 
-        SvgAndMetadata svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, VARIANT_2_ID, List.of("vlFr1A", "vlNotFound1"), 0, true);
+        SvgAndMetadata svgAndMetadata = networkAreaDiagramService.generateNetworkAreaDiagramSvg(testNetworkId, VARIANT_2_ID, VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlFr1A", "vlNotFound1")).build(), 0, true);
         Object additionalMetadata = svgAndMetadata.getAdditionalMetadata();
         assertNotNull(additionalMetadata);
         Map<String, Object> convertedMetadata = objectMapper.convertValue(additionalMetadata, new TypeReference<>() { });
@@ -737,10 +753,12 @@ class SingleLineDiagramTest {
         List<Map<String, String>> voltageLevels = objectMapper.convertValue(convertedMetadata.get("voltageLevels"), new TypeReference<>() { });
         assertNotNull(voltageLevels);
         assertEquals(1, voltageLevels.size());
-        assertEquals("vlFr1A", voltageLevels.get(0).get("id"));
+        assertEquals("vlFr1A", voltageLevels.getFirst().get("id"));
+        VoltageLevelSelectionInfos expandedVoltageLevelId = VoltageLevelSelectionInfos.builder().voltageLevelsIds(List.of("vlNotFound1", "vlNotFound2")).build();
+        String jsonBody = objectMapper.writeValueAsString(expandedVoltageLevelId);
         mvc.perform(post("/v1/network-area-diagram/{networkUuid}?variantId=" + VARIANT_2_ID + "&depth=0", testNetworkId)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("[\"vlNotFound1\", \"vlNotFound2\"]"))
+                .content(jsonBody))
                 .andExpect(status().isNotFound());
     }
 
